fragment changing implemented but can't run bc dumb error i cant fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment android:name="com.example.mitch.databaseoftasks.TaskListFragment"
+    <fragment
         android:id="@+id/currentFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
