--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -10,14 +10,13 @@
         android:layout_height="match_parent"></ListView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="addTask"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="@android:color/darker_gray" />
 
