--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -2,12 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants">
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addButton"
@@ -16,8 +18,9 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:focusable="true"
+        android:focusable="false"
         android:src="@android:drawable/ic_input_add"
-        app:backgroundTint="@android:color/darker_gray" />
+        app:backgroundTint="@android:color/darker_gray"
+        app:elevation="0dp"/>
 
 </FrameLayout>
