--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -18,6 +18,7 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:textSize="12sp"
+        android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/addSaveBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
